--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -50,5 +50,8 @@
   "Username": "Username",
   "Views": "Views",
   "Visibility": "Visibility",
-  "You have viewed all notifications.": "You have viewed all notifications."
+  "You have viewed all notifications.": "You have viewed all notifications.",
+  "Request":"Request",
+  "Create Repository":"Create Repository",
+  "Create Privilege":"Create Privilege"
 }
