完成创建分支前端逻辑

--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -79,5 +79,7 @@
   "Requirement Description":"需求描述",
   "Submit Create":"提交创建",
   "Application List":"可申请应用列表",
-  "Please Input The App Name You Will Develop":"请输入你要开发的应用名称"
+  "Please Input The App Name You Will Develop":"请输入你要开发的应用名称",
+  "Please Choose Application Branch Name":"请填写应用分支名",
+  "Branch Address":"分支地址"
 }
