代码模块创建

--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -54,13 +54,13 @@
   "Request":"模拟请求",
   "Create Repository":"创建仓库",
   "Create Privilege" :"创建权限",
-  "AppName":"代码模块名称",
-  "AppType":"应用类型",
-  "CsvType":"版本控制类型",
-  "Path":"代码路径",
-  "CodeType":"开发语言",
+  "Code Module Name":"代码模块名称",
+  "App Type":"应用类型",
+  "CSV Type":"版本控制类型",
+  "Master Branch URL":"Master分支URL",
+  "Code Type":"开发语言",
   "Config":"代码配置",
-  "DevType":"开发类型",
+  "Develop Mode":"开发类型",
   "Creator":"应用负责人",
   "LastOperator":"最后修改人",
   "Create Code":"创建代码模块",
@@ -87,5 +87,8 @@
   "Test":"测试",
   "SCM":"配管",
   "PM":"PM",
-  "Add Yourself":"添加自己"
+  "Add Yourself":"添加自己",
+  "Create Code Module":"创建代码模块",
+  "Compile Shell Script":"编译脚本",
+  "Deploy Type":"部署方式"
 }
