--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -90,5 +90,11 @@
   "Add Yourself":"添加自己",
   "Create Code Module":"创建代码模块",
   "Compile Shell Script":"编译脚本",
-  "Deploy Type":"部署方式"
+  "Deploy Type":"部署方式",
+  "Base Info":"基础信息",
+  "Responsible Person":"应用负责人",
+  "Compile Config":"编译信息",
+  "Code Language":"代码语言",
+  "Compile Tool":"编译工具",
+  "Compile Script Config":"配置编译脚本"
 }
