--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -96,5 +96,34 @@
   "Compile Config":"编译信息",
   "Code Language":"代码语言",
   "Compile Tool":"编译工具",
-  "Compile Script Config":"配置编译脚本"
+  "Compile Script Config":"配置编译脚本",
+  "Create Jenkins":"添加 Jenkins Master",
+  "Account":"账户",
+  "Update Time":"修改时间",
+  "Sync Privilege":"同步 Jenkins 权限",
+  "Privilege List":"权限列表",
+  "Code Credential":"代码库权限",
+  "Docker Build And Publish":"Docker 配置",
+  "Aliyun Container Service Deploy":"Swarm 配置",
+  "Repository Name":"仓库名称",
+  "Image Tag":"镜像版本号",
+  "Registry credentials":"仓库权限",
+  "Build Context":"构建目录",
+  "Dockerfile Path":"Dockerfile 路径",
+  "Docker registry URL":"仓库地址",
+  "MasterURL":"Swarm URL",
+  "ApplicationName":"应用名称",
+  "ComposeTemplate":"Compose模版路径",
+  "Host Credential":"Swarm 权限",
+  "Publish Strategy":"发布策略",
+  "Description":"描述",
+  "Scope":"范围",
+  "Private Key":"私钥",
+  "Passphrase":"密码",
+  "Type":"类型",
+  "Privilege Type":"权限类型",
+  "Privilege Name":"权限名称",
+  "Privilege Creator":"创建者",
+  "Options":"操作",
+  "Compile Script List":"编译脚本列表"
 }
